<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListingDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".listing_details.ListingDetailsActivity">

        <ImageView
            android:id="@+id/listing_detail_current_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/content_description_listing_image"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="15.5:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listing_images_rv"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listing_detail_current_iv"
            tools:itemCount="5"
            tools:listitem="@layout/activity_listing_details_image" />

        <TextView
            android:id="@+id/listing_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:ellipsize="end"
            android:textColor="@android:color/primary_text_light"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listing_images_rv"
            tools:text="@string/example_title_text" />

        <TextView
            android:id="@+id/listing_description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:textIsSelectable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listing_title_tv"
            tools:text="@string/example_description_text" />

        <TextView
            android:id="@+id/listing_member_nickname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="25dp"
            android:textIsSelectable="false"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listing_description_tv"
            tools:text="Example Name" />

        <TextView
            android:id="@+id/listing_member_location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textIsSelectable="false"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/listing_member_nickname_tv"
            app:layout_constraintTop_toBottomOf="@+id/listing_member_nickname_tv"
            tools:text="Location" />

        <ImageView
            android:id="@+id/listing_negative_feedback_iv"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/negative_feedback_image_description"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/listing_member_location_tv"
            app:layout_constraintEnd_toStartOf="@+id/listing_negative_feedback_tv"
            app:layout_constraintTop_toTopOf="@+id/listing_member_location_tv"
            app:layout_constraintVertical_bias="0.515"
            app:srcCompat="@drawable/ic_negative_feedback"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/listing_positive_feedback_iv"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/positive_feedback_image_description"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/listing_negative_feedback_iv"
            app:layout_constraintEnd_toStartOf="@+id/listing_positive_feedback_tv"
            app:layout_constraintTop_toTopOf="@+id/listing_negative_feedback_iv"
            app:srcCompat="@drawable/ic_positive_feedback"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/listing_negative_feedback_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:textIsSelectable="false"
            app:layout_constraintBottom_toBottomOf="@+id/listing_negative_feedback_iv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/listing_negative_feedback_iv"
            tools:text="10" />

        <TextView
            android:id="@+id/listing_positive_feedback_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            android:textIsSelectable="false"
            app:layout_constraintBottom_toBottomOf="@+id/listing_negative_feedback_iv"
            app:layout_constraintEnd_toStartOf="@+id/listing_negative_feedback_iv"
            app:layout_constraintTop_toTopOf="@+id/listing_negative_feedback_iv"
            tools:text="250" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>